refactor to remove deprecation warning for newInstance